<resources>
    <string name="app_name">Ticket to Ride</string>
    <string name="lobby_join_button">Join Game</string>
    <string name="join_button">Join</string>
    <string name="lobby_create_button">Create Game</string>
    <string name="log_out">Log Out</string>
    <string name="leave_game">Leave Game</string>
    <string name="cancel_game">Cancel Game</string>
    <string name="create_button">Create</string>
    <string name="status_string">Status</string>
    <string name="player_num"># of Players</string>
    <string name="game_list">List of Games</string>
    <string name="display_commands">Commands</string>
    <string name="game_name">Game Name</string>
    <string name="lobby_logout_button">Logout</string>
    <string name="player_name">Player Name</string>
    <string name="message">Message</string>
    <string name="exit_chat_button">Exit Chat</string>
    <string name="send_message_button">Send</string>
    <string name="enter_message">Enter Message:</string>
    <string name="openChat">Chat</string>
    <string name="openPlayerList">Open Player List</string>
    <string name="dest_card_title">Select Destination Cards</string>
    <string name="exit_game_history_button">Exit Game History</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
