<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:background="@drawable/background"
              android:layout_height="match_parent"
              android:layout_width="match_parent">
    <LinearLayout
        android:id="@+id/gameListFragment"
        android:orientation="vertical"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="25dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80808080">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/player_name"
                android:layout_weight="1"
                android:textAlignment="viewStart"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/message"
                android:layout_weight="3"
                android:textAlignment="center"/>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:scrollbars="vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">
            <Button
                android:id="@+id/exitchatbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="25dp"
                android:text="@string/exit_chat_button"/>

            <TextView
                android:id="@+id/messageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_message"/>

            <EditText
                android:id="@+id/messageEditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"/>

            <Button
                android:id="@+id/sendMessageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/send_message_button"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>